@@ -1,0 +1,3 @@
+
+dist_bin_SCRIPTS = \
+	difxsniff
